--- a/package.json
+++ b/package.json
@@ -2,6 +2,19 @@
   "name": "office-text-extractor",
   "version": "1.0.1",
   "description": "Yet another library to extract text from MS Office and PDF files",
+  "keywords": [
+    "text-extraction",
+    "get-text",
+    "parser",
+    "ms-office",
+    "ms-excel",
+    "ms-word",
+    "ms-powerpoint",
+    "xlsx",
+    "docx",
+    "pptx",
+    "pdf"
+  ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
