--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "pdf"
   ],
   "main": "lib/index.js",
-  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -41,6 +40,18 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "ava": "3.15.0"
+  },
+  "ava": {
+    "files": [
+      "tests/**/*"
+    ],
+    "failFast": true,
+    "verbose": true,
+    "nodeArguments": [
+      "--trace-deprecation",
+      "--napi-modules"
+    ]
   }
 }
