--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pdf"
   ],
   "main": "lib/index.js",
+  "types": "types/index.d.ts",
   "scripts": {
     "test": "ava"
   },
@@ -31,17 +32,18 @@
   "homepage": "https://github.com/gamemaker1/office-text-extractor#readme",
   "dependencies": {
     "decompress": "^4.2.1",
-    "file-type": "^16.2.0",
+    "file-type": "^16.4.0",
     "fs-extra": "^9.1.0",
-    "js-yaml": "^4.0.0",
+    "js-yaml": "^4.1.0",
     "pdf-parse": "^1.1.1",
     "read-chunk": "^3.2.0",
     "xlsx": "^0.16.9",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "prettier": "^2.2.1",
-    "ava": "3.15.0"
+    "ava": "3.15.0",
+    "np": "^7.5.0",
+    "prettier": "^2.3.0"
   },
   "ava": {
     "files": [
