--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
   "homepage": "https://github.com/gamemaker1/office-text-extractor#readme",
   "dependencies": {
     "decompress": "^4.2.1",
-    "file-type": "^16.4.0",
+    "file-type": "^16.5.0",
     "fs-extra": "^9.1.0",
     "js-yaml": "^4.1.0",
+    "mammoth": "^1.4.17",
     "pdf-parse": "^1.1.1",
     "read-chunk": "^3.2.0",
     "xlsx": "^0.16.9",
@@ -43,7 +44,7 @@
   "devDependencies": {
     "ava": "3.15.0",
     "np": "^7.5.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.1"
   },
   "ava": {
     "files": [
