--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,23 +1,28 @@
+# .github/workflows/ci.yaml
+# The stuff to run on every push to the repository.
+
 name: CI
 
 on: [push, pull_request]
 
 jobs:
-  ci:
+  test:
+    name: Test
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x, 16.x]
-
     steps:
-    - name: Clone repository
-      uses: actions/checkout@v2
-    - name: Setup Node ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Download dependencies
-      run: npm ci
-    - name: Run tests
-      run: npm test
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v2.0.1
+        with:
+          version: latest
+      - name: Setup Node 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          registry-url: 'https://registry.npmjs.org/'
+          cache: 'pnpm'
+      - name: Install dependencies
+        run: pnpm install
+      - name: Test the library
+        run: pnpm test
