--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 		"url": "https://github.com/gamemaker1/office-text-extractor/issues"
 	},
 	"homepage": "https://github.com/gamemaker1/office-text-extractor#readme",
-	"main": "source/index.js",
-	"types": "source/index.d.ts",
+	"exports": "./source/index.js",
+	"types": "./source/index.d.ts",
 	"files": [
 		"license.md",
 		"readme.md",
@@ -34,6 +34,9 @@
 		"source/"
 	],
 	"type": "module",
+	"engines": {
+		"node": ">= 14.16"
+	},
 	"scripts": {
 		"test": "xo && ava"
 	},
