--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14, 15, 16, 17, 18]
+        pnpm-version: [7, 7, 8, 8, 8]
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
