--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"node": ">= 14.16"
 	},
 	"scripts": {
-		"test": "tsc && xo"
+		"test": "tsc && xo && ava"
 	},
 	"dependencies": {
 		"file-type": "^18.2.1",
@@ -47,6 +47,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "18.15.11",
+		"ava": "5.3.0",
 		"np": "^7.7.0",
 		"prettier": "^2.8.7",
 		"tsx": "3.12.7",
@@ -70,5 +71,14 @@
 			"@typescript-eslint/no-unsafe-return": 0,
 			"@typescript-eslint/no-unsafe-call": 0
 		}
+	},
+	"ava": {
+		"extensions": {
+			"ts": "module"
+		},
+		"nodeArguments": [
+			"--loader=tsx",
+			"--no-warnings"
+		]
 	}
 }
