--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14, 15, 16, 17, 18]
+        node-version: [16, 18, 19, 20]
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
@@ -41,10 +41,10 @@ jobs:
         uses: pnpm/action-setup@v2.0.1
         with:
           version: 8
-      - name: Setup Node 18
+      - name: Setup Node 20
         uses: actions/setup-node@v2
         with:
-          node-version: 18
+          node-version: 20
           registry-url: 'https://registry.npmjs.org/'
           cache: 'pnpm'
       - name: Install dependencies
