--- a/package.json
+++ b/package.json
@@ -35,20 +35,25 @@
 	],
 	"type": "module",
 	"engines": {
-		"node": ">= 14.16"
+		"node": ">= 16"
 	},
 	"scripts": {
-		"test": "tsc && xo && ava"
+		"test": "run-s test:*",
+		"test:compile": "tsc",
+		"test:quality": "xo",
+		"test:integration": "NODE_OPTIONS='--loader=tsx' ava"
 	},
 	"dependencies": {
 		"file-type": "^18.2.1",
 		"got": "12.6.0",
-		"pdf-parse": "1.1.1"
+		"pdf-parse": "1.1.1",
+		"pnpm": "8.6.1"
 	},
 	"devDependencies": {
 		"@types/node": "18.15.11",
 		"ava": "5.3.0",
 		"np": "^7.7.0",
+		"npm-run-all": "4.1.5",
 		"prettier": "^2.8.7",
 		"tsx": "3.12.7",
 		"typescript": "5.0.3",
@@ -77,7 +82,6 @@
 			"ts": "module"
 		},
 		"nodeArguments": [
-			"--loader=tsx",
 			"--no-warnings"
 		]
 	}
