--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	"dependencies": {
 		"file-type": "^18.2.1",
 		"got": "12.6.0",
+		"mammoth": "1.6.0",
 		"pdf-parse": "1.1.1",
 		"pnpm": "8.6.1"
 	},
