--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16, 18, 19, 20]
+        node-version: [16, 18, 20]
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
