--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"test:integration": "NODE_OPTIONS='--loader=tsx' ava"
 	},
 	"dependencies": {
-		"file-type": "^18.2.1",
+		"file-type": "18.2.1",
 		"got": "12.6.0",
 		"mammoth": "1.6.0",
 		"pdf-parse": "1.1.1"
@@ -52,9 +52,9 @@
 	"devDependencies": {
 		"@types/node": "18.15.11",
 		"ava": "5.3.0",
-		"np": "^7.7.0",
+		"np": "7.7.0",
 		"npm-run-all": "4.1.5",
-		"prettier": "^2.8.7",
+		"prettier": "2.8.7",
 		"tsx": "3.12.7",
 		"typescript": "5.0.3",
 		"xo": "0.53.1"
