--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,12 @@
 	"compilerOptions": {
 		"target": "es2020",
 		"module": "node16",
-		"noEmit": true,
 		"sourceMap": false,
 		"strict": true,
 		"strictNullChecks": true,
 		"esModuleInterop": true,
-		"moduleResolution": "node16"
-	}
+		"moduleResolution": "node16",
+		"outDir": "build/"
+	},
+	"include": ["source/"]
 }
