build: generate type files too

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"strictNullChecks": true,
 		"esModuleInterop": true,
 		"moduleResolution": "node16",
+		"declaration": true,
 		"outDir": "build/"
 	},
 	"include": ["source/"]
