--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"homepage": "https://github.com/gamemaker1/office-text-extractor#readme",
 	"exports": "./build/index.js",
+	"types": "./build/index.d.ts",
 	"files": [
 		"license.md",
 		"readme.md",
