--- a/package.json
+++ b/package.json
@@ -47,16 +47,21 @@
 		"test:integration": "NODE_OPTIONS='--loader=tsx' ava"
 	},
 	"dependencies": {
+		"fflate": "0.8.0",
 		"file-type": "18.2.1",
 		"got": "12.6.0",
 		"js-yaml": "4.1.0",
 		"mammoth": "1.6.0",
 		"pdf-parse": "1.1.1",
-		"xlsx": "0.18.5"
+		"text-encoding": "0.7.0",
+		"xlsx": "0.18.5",
+		"xml2js": "0.6.0"
 	},
 	"devDependencies": {
 		"@types/js-yaml": "4.0.5",
 		"@types/node": "18.15.11",
+		"@types/text-encoding": "0.0.36",
+		"@types/xml2js": "0.4.11",
 		"ava": "5.3.0",
 		"np": "7.7.0",
 		"npm-run-all": "4.1.5",
