fix(ts): eslint has a weird type error
- similar to https://github.com/typed-ember/ember-cli-typescript/issues/1502

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 		"esModuleInterop": true,
 		"moduleResolution": "node16",
 		"declaration": true,
-		"outDir": "build/"
+		"outDir": "build/",
+		"skipLibCheck": true
 	},
 	"include": ["source/"]
 }
