--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
 		"mammoth": "1.6.0",
 		"pdf-parse": "1.1.1",
 		"text-encoding": "0.7.0",
-		"xlsx": "0.18.5",
+		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz",
 		"xml2js": "0.6.2"
 	},
 	"devDependencies": {
