--- a/package.json
+++ b/package.json
@@ -44,31 +44,31 @@
 		"test": "run-s test:compile test:integration",
 		"test:compile": "tsc --noEmit",
 		"test:quality": "xo source/ test/",
-		"test:integration": "NODE_OPTIONS='--loader=tsx' ava"
+		"test:integration": "ava"
 	},
 	"dependencies": {
-		"fflate": "0.8.1",
-		"file-type": "18.5.0",
-		"got": "13.0.0",
+		"fflate": "0.8.2",
+		"file-type": "19.3.0",
+		"got": "14.4.1",
 		"js-yaml": "4.1.0",
-		"mammoth": "1.6.0",
+		"mammoth": "1.8.0",
 		"pdf-parse": "1.1.1",
 		"text-encoding": "0.7.0",
-		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
+		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
 		"xml2js": "0.6.2"
 	},
 	"devDependencies": {
-		"@types/js-yaml": "4.0.6",
-		"@types/node": "20.8.3",
-		"@types/text-encoding": "0.0.37",
-		"@types/xml2js": "0.4.12",
-		"ava": "5.3.1",
-		"np": "8.0.4",
+		"@types/js-yaml": "4.0.9",
+		"@types/node": "20.14.11",
+		"@types/text-encoding": "0.0.39",
+		"@types/xml2js": "0.4.14",
+		"ava": "6.1.3",
+		"np": "10.0.7",
 		"npm-run-all": "4.1.5",
-		"prettier": "3.0.3",
-		"tsx": "3.13.0",
-		"typescript": "5.2.2",
-		"xo": "0.56.0"
+		"prettier": "3.3.3",
+		"tsimp": "2.0.11",
+		"typescript": "5.5.4",
+		"xo": "0.59.0"
 	},
 	"prettier": {
 		"semi": false,
@@ -93,7 +93,7 @@
 			"ts": "module"
 		},
 		"nodeArguments": [
-			"--no-warnings"
+			"--import=tsimp"
 		]
 	}
 }
