--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,55 +1,55 @@
 # .github/workflows/ci.yaml
 # The stuff to run on every push to the repository.
 
-name: CI
+name: ci
 
 on: [push, pull_request]
 
 jobs:
   test:
-    name: Test
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16, 18, 20]
+        node-version: [18, 20, 22]
     steps:
-      - name: Checkout the repository
+      - name: clone repository
         uses: actions/checkout@v2
-      - name: Setup PNPM
+      - name: setup pnpm
         uses: pnpm/action-setup@v2.0.1
         with:
-          version: 8
-      - name: Setup Node ${{ matrix.node-version }}
+          version: 9
+      - name: setup node ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: 'https://registry.npmjs.org/'
           cache: 'pnpm'
-      - name: Install dependencies
+      - name: install deps
         run: pnpm install
-      - name: Test the library
+      - name: test the library
         run: pnpm test
   publish:
-    name: Publish
     runs-on: ubuntu-latest
     needs: [test]
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
-      - name: Checkout the repository
+      - name: clone repository
         uses: actions/checkout@v2
-      - name: Setup PNPM
+      - name: setup pnpm
         uses: pnpm/action-setup@v2.0.1
         with:
-          version: 8
-      - name: Setup Node 20
+          version: 9
+      - name: setup node 22
         uses: actions/setup-node@v2
         with:
-          node-version: 20
+          node-version: 22
           registry-url: 'https://registry.npmjs.org/'
           cache: 'pnpm'
-      - name: Install dependencies
-        run: pnpm install && pnpm compile
-      - name: Publish package
+      - name: install dependencies
+        run: pnpm install
+      - name: compile package
+        run: pnpm compile
+      - name: publish
         run: pnpm publish --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTOMATION_TOKEN }}
