--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"ava": "6.4.1",
 		"esbuild": "0.27.2",
 		"esbuild-plugin-polyfill-node": "0.3.0",
+		"esmock": "2.7.3",
 		"np": "10.2.0",
 		"npm-run-all": "4.1.5",
 		"prettier": "3.7.4",
